--- a/app/src/main/res/layout/fragment_add_grocery.xml
+++ b/app/src/main/res/layout/fragment_add_grocery.xml
@@ -7,6 +7,27 @@
     android:layout_height="match_parent"
     tools:context=".AddGroceryFragment">
 
+    <!-- Back and Add Button -->
+    <Button
+        android:id="@+id/add_item_back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:text="Back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/add_item_add_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:layout_marginTop="5dp"
+        android:text="Add"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <!-- Title -->
     <TextView
         android:id="@+id/add_item_title"
