--- a/app/src/main/res/layout/fragment_add_grocery.xml
+++ b/app/src/main/res/layout/fragment_add_grocery.xml
@@ -197,7 +197,7 @@
         app:layout_constraintTop_toBottomOf="@id/item_price_spacer" />
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/item_freezer_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/item_freezer_status_label"
@@ -222,7 +222,7 @@
         app:layout_constraintTop_toBottomOf="@id/item_freezer_status_spacer" />
 
     <CalendarView
-        android:id="@+id/calendarView2"
+        android:id="@+id/item_expiration_calendar"
         android:layout_width="304dp"
         android:layout_height="307dp"
         android:layout_marginStart="52dp"
