--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -8,4 +8,11 @@
     <!-- reuse the bottom_bar for all the main sections -->
     <include layout="@layout/bottom_bar"/>
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Recipes Fragment" />
+
+
 </FrameLayout>
