--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -8,4 +8,10 @@
     <!-- reuse the bottom_bar for all the main sections -->
     <include layout="@layout/bottom_bar"/>
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Statistics Fragment" />
+
 </FrameLayout>
