--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="#FFFFFF"
     tools:context=".StatisticsFragment">
 
     <TextView
@@ -21,7 +22,7 @@
     <ImageView
         android:id="@+id/profilePicture"
         android:layout_width="400dp"
-        android:layout_height="200dp"
+        android:layout_height="180dp"
         android:layout_gravity="center"
         android:layout_alignParentEnd="true"
         android:src="@drawable/pfp1"/>
@@ -41,6 +42,19 @@
     <Space
         android:layout_width="match_parent"
         android:layout_height="20dp"/>
+
+    <Spinner
+        android:id="@+id/bar_graph_dropdown"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="left"
+        android:spinnerMode="dropdown"
+        android:entries="@array/bar_graph_sorting"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="10dp"/>
 
     <com.github.mikephil.charting.charts.BarChart
         android:layout_width="match_parent"
