--- a/app/src/main/res/layout/grocery_item_appearance.xml
+++ b/app/src/main/res/layout/grocery_item_appearance.xml
@@ -1,35 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent">-->
-
-<!--&lt;!&ndash; This is the xml file for the-->
-<!--appearance of each item in the grocery list &ndash;&gt;-->
-
-
-<!--    <TextView-->
-<!--        android:id="@+id/textView4"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="TextView"-->
-<!--        tools:layout_editor_absoluteX="144dp"-->
-<!--        tools:layout_editor_absoluteY="130dp" />-->
-<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
-
-
-<!-- Temporary Layout for testing grocery item appearance -->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center_vertical">
+    android:layout_height="wrap_content">
 
-    <!-- This is the xml file for the
+<!-- This is the xml file for the
 appearance of each item in the grocery list -->
 
+
     <TextView
-        android:id="@+id/myTextView"
-        android:layout_width="wrap_content"
+        android:id="@+id/grocery_list_item"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="default_text"/>
-</FrameLayout>
+        android:text="default_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/grocery_days_left"
+        android:layout_width="75dp"
+        android:layout_height="wrap_content"
+        android:text="default_days_left"
+        android:layout_marginEnd="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+<!--    I'd prefer this to be the triple vertical dots-->
+        <ImageButton
+            android:id="@+id/grocery_options"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="10dp"
+            app:srcCompat="@android:drawable/ic_menu_manage"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+<!--    <ImageButton-->
+<!--        android:id="@+id/grocery_delete"-->
+<!--        android:layout_width="50dp"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:layout_marginEnd="25dp"-->
+<!--        app:srcCompat="@android:drawable/ic_menu_delete"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--    <ImageButton-->
+<!--        android:id="@+id/grocery_edit"-->
+<!--        android:layout_width="50dp"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:layout_marginEnd="25dp"-->
+<!--        app:srcCompat="@android:drawable/ic_menu_edit"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--    <ImageButton-->
+<!--        android:id="@+id/grocery_use_one"-->
+<!--        android:layout_width="50dp"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:layout_marginEnd="25dp"-->
+<!--        app:srcCompat="@android:drawable/ic_menu_manage"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+<!--&lt;!&ndash; Temporary Layout for testing grocery item appearance &ndash;&gt;-->
+<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:gravity="center_vertical">-->
+
+<!--    &lt;!&ndash; This is the xml file for the-->
+<!--appearance of each item in the grocery list &ndash;&gt;-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/myTextView"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="default_text"/>-->
+<!--</FrameLayout>-->
