--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -8,33 +8,64 @@
     android:background="#FFFFFF"
     tools:context=".StatisticsFragment">
 
-    <TextView
-        android:id="@+id/grocery_list_title"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:gravity="center"
-        android:textAllCaps="true"
-        android:text="@string/app_name"
-        android:textSize="@dimen/title_size"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="-20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp">
+        <TextView
+            android:id="@+id/titleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SPO"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/exclamation"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"/>
+        <TextView
+            android:id="@+id/exclamation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="!"
+            android:textColor="#00b215"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/titleText"
+            app:layout_constraintEnd_toStartOf="@+id/alert"
+            app:layout_constraintStart_toEndOf="@id/titleText"/>
+        <TextView
+            android:id="@+id/alert"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="LER ALERT"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/titleText"
+            app:layout_constraintStart_toEndOf="@id/exclamation"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
         android:id="@+id/profilePicture"
-        android:layout_width="400dp"
-        android:layout_height="180dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:src="@drawable/bird1_green"
         android:layout_gravity="center"
-        android:layout_alignParentEnd="true"
-        android:src="@drawable/pfp1"/>
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="20dp"/>
+        android:layout_margin="16dp"
+        android:contentDescription="Profile picture"
+        android:clickable="true"
+        android:focusable="true"/>
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="-30dp"
+        android:textStyle="bold"
         android:text="YOUR STATISTICS"
         android:textSize="@dimen/label_text_size"
         android:textAlignment="center"/>
@@ -43,25 +74,39 @@
         android:layout_width="match_parent"
         android:layout_height="20dp"/>
 
-    <Spinner
-        android:id="@+id/bar_graph_dropdown"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_gravity="left"
-        android:spinnerMode="dropdown"
-        android:entries="@array/bar_graph_sorting"/>
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:padding="20dp"
+        android:background="@drawable/bottom_buttons">
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="10dp"/>
+        <Spinner
+            android:id="@+id/bar_graph_dropdown"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:spinnerMode="dropdown"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:entries="@array/bar_graph_sorting" />
 
-    <com.github.mikephil.charting.charts.BarChart
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:id="@+id/barchart"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"/>
+        <Space
+            android:id="@+id/spacer"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/bar_graph_dropdown"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <com.github.mikephil.charting.charts.BarChart
+            android:layout_width="match_parent"
+            android:layout_height="280dp"
+            android:id="@+id/barchart"
+            app:layout_constraintTop_toBottomOf="@+id/spacer"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <include layout="@layout/bottom_bar"/>
 
