--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="label_width">160dp</dimen>
     <dimen name="label_height">50dp</dimen>
     <dimen name="input_width">240dp</dimen>
+    <dimen name="button_horizontal_padding">16dp</dimen>
+    <dimen name="button_vertical_padding">10dp</dimen>
 </resources>
